[project]
name = "langgraph-tenancy"
version = "0.1.0"
description = "Tenant isolation and per-tenant usage metering for LangGraph checkpointers and stores"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Abhishek Chauhan", email = "ac12644@gmail.com" }]
keywords = [
    "langgraph",
    "multi-tenant",
    "tenant-isolation",
    "checkpointer",
    "agents",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
dependencies = [
    "langgraph-checkpoint>=2.0.0",
    "langchain-core>=0.2.38",
]

[project.urls]
Source = "https://github.com/ac12644/langgraph-tenancy"
Issues = "https://github.com/ac12644/langgraph-tenancy/issues"

[project.optional-dependencies]
test = [
    "pytest>=8",
    "langgraph>=0.4",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langgraph_tenancy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
